--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
     xmlns:p="http://primefaces.org/ui">
     
 <h:head>
-    <title>Argentum Alterado Web</title>
+    <title>Argentum Web</title>
 </h:head>
 
 <h:body>
@@ -15,7 +15,7 @@
 	<h:form prependId="false">
 	<h:outputText value="Implementando funcionalidade filtro por valor..."></h:outputText>
 	<p:panel>
-            <h:outputText value="Filtrando por período:"  style="margin-right:10px" />
+            <h:outputText value="Filtrar por período:"  style="margin-right:10px" />
             <p:inputMask id="filtroDataDe"  style="width:100px;" placeholder="De" mask="99/99/9999" value="#{argentumBean.filtroDataDe}">
             	<f:convertDateTime pattern="dd/MM/yyyy" />
             </p:inputMask>
